<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epioid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_view_infos_header">Mes informations</string>
    <string name="home_view_to_come_header">Mes activités du jour</string>
    <string name="home_view_susies_header">Prochaines susie</string>
    <string name="default_login">troll_a</string>
    <string name="default_semester">6</string>
    <string name="default_gpa">3.99</string>
    <string name="default_credits">200</string>
    <string name="default_promo">2017</string>
    <string name="default_full_name">Aziz Troll</string>
    <string name="default_susie_class_name">FUN!</string>
    <string name="default_susie_date">27/01/2015 14h</string>
    <string name="default_susie_name">lukass_l</string>
    <string name="default_susie_registered"></string>
    <string name="susie_registered"></string>
    <string name="susie_basic_registered">Inscrit : </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>


</resources>
