<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:id="@+id/item_calendar_list">

    <TextView
        android:id="@+id/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_susie_class_name"
        android:textStyle="bold"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/class_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_susie_date"/>

    <TextView
        android:id="@+id/class_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_susie_date"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/class_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/susie_basic_registered"/>

        <TextView
            android:id="@+id/class_is_registered"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_susie_registered"/>

    </LinearLayout>

</LinearLayout>