<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="epitech.epioid.activities.MainActivity"
    android:gravity="fill_horizontal|center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/home_view_infos_header"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <fragment android:name="epitech.epioid.fragments.HomeFragment"
        android:id="@+id/home_fragment_view"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        tools:layout="@layout/home_view"
        android:layout_gravity="center_vertical" />

    <ProgressBar android:id="@+id/main_activity_login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_weight="0.16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/home_view_to_come_header"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <fragment android:name="epitech.epioid.fragments.ActivitiesToComeFragment"
        android:id="@+id/activities_fragment_view"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        tools:layout="@layout/activities_view"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/home_view_susies_header"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <fragment android:name="epitech.epioid.fragments.SusiesFragment"
        android:id="@+id/susies_fragment_view"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        tools:layout="@layout/susies_view"
        android:layout_gravity="center" />


</LinearLayout>
