<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_view_main_linear_layout"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="12dp">


    <ProgressBar android:id="@+id/home_view_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/home_view_inner_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/home_view_student_photo"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="student_photo"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="12dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher"/>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:stretchColumns="*">

                <TableRow
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:id="@+id/full_name_row"
                    android:background="#000000"
                    android:minHeight="24dp">

                    <TextView
                        android:id="@+id/home_view_student_full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:text="@string/default_full_name"
                        android:textStyle="bold"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:layout_column="0"
                        android:layout_weight="0"
                        android:layout_span="2"
                        android:layout_gravity="center"/>
                </TableRow>

                <TableRow
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:id="@+id/login_row_view">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Login"
                        android:id="@+id/textView"
                        android:layout_column="0"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/home_view_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_login"
                        android:textSize="@dimen/abc_text_size_subhead_material"
                        android:layout_column="1" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Promo"
                        android:id="@+id/textView4"
                        android:layout_column="0"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/home_view_student_promo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_promo"
                        android:layout_column="1" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Semestre"
                        android:id="@+id/textView5"
                        android:layout_column="0"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/home_view_student_full_semester"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_semester"
                        android:layout_column="1" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Log actif"
                        android:id="@+id/textView6"
                        android:layout_column="0"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/home_view_student_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_semester"
                        android:layout_column="1" />

                    </TableRow>
            </TableLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:text="Dernière activité"
            android:id="@+id/home_view_history_header"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/home_view_history"
            android:layout_gravity="center_horizontal" />

        </LinearLayout>

</RelativeLayout>